Updating button colors

--- a/common/theme.css
+++ b/common/theme.css
@@ -1,12 +1,10 @@
 :root {
-  --color-primary: goldenrod;
-  --color-primary-light: gold;
-  --color-secondary: lightcoral;
-  --color-accent: greenyellow;
-  --color-neutral-beige: #e2e2e2;
-  --color-whatever: peachpuff;
-  --font-primary: "Alegreya Sans", "Trebuchet MS", arial, sans-serif;
-  --font-secondary: "Source Code Pro", menlo, consolas, monospace;
+  --color-primary: #cc9ab6;
+  --color-secondary: #333;
+  --color-whatever: #cc9ab6;
+  --color-primary-light: #e5e5e5;
+  --font-primary: "Roboto", "Lato", arial, sans-serif;
+  --font-secondary: "Roboto Condensed", monospace;
 }
 
 html {
