--- a/patterns/buttons/buttons.css
+++ b/patterns/buttons/buttons.css
@@ -8,13 +8,12 @@
 .btn-light {
   background-color: var(--color-primary-light);
   border-color: var(--color-primary-light);
-
-  color: #fff;
+  color:
 }
 
 .btn-ghost {
   background-color: transparent;
-  border-: none;
+  border: none;
 
   color: var(--color-primary);
 }
