--- a/patterns/cards/cards.css
+++ b/patterns/cards/cards.css
@@ -2,3 +2,12 @@
   border: 4px solid var(--color-primary-light);
   border-radius: 8px;
 }
+
+.basic-card {
+  background-color: var(--color-primary-light);
+  border: none;
+}
+
+.icon-card {
+  border: 4px solid var(--color-secondary);
+}
