--- a/patterns/header/header.css
+++ b/patterns/header/header.css
@@ -2,10 +2,6 @@ html {
   background-color: none;
 }
 
-nav {
-  vertical-align: middle;
-}
-
 nav a {
   color: var(--color-secondary);
 }
@@ -18,12 +14,8 @@ nav a:hover {
   position: relative;
 }
 
-.nav .current::after {
-  bottom: -.5em;
-  left: 50%;
-  position: absolute;
-  width: .3em;
-  height: .3em;
+.logo-position {
+  text-align: center;
 }
 
 header {
@@ -32,31 +24,14 @@ header {
 
 @media only screen and (min-width: 38em) {
 
-  .masthead {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-
-}
-
-@media only screen and (max-width: 38em) {
-
  nav {
   text-align: center;
   }
 
 }
 
+@media only screen and (min-width: 60em) {
 
-@media only screen and (max-width: 60em) {
 
-  .logo-position {
-    text-align: center;
-  }
-
-  .shop-icon {
-  display:none;
-  }
 
 }
