--- a/patterns/banner/banner.css
+++ b/patterns/banner/banner.css
@@ -9,10 +9,8 @@
 
 .banner-content {
   position: absolute;
-  width: 50%;
-  bottom: 30%;
-  left: 50%;
-  transform: translate(-50%);
+  width: 100%;
+  max-width: 20em;
   color: white;
   background-color: black;
   padding-top: 5px;
