--- a/patterns/header/header.css
+++ b/patterns/header/header.css
@@ -22,6 +22,10 @@ header {
   background-color: var(--color-primary-light);
 }
 
+.logo {
+  width: 192px;
+}
+
 @media only screen and (min-width: 38em) {
 
  nav {
