The final commit
Indents and spacing fixed.

--- a/common/theme.css
+++ b/common/theme.css
@@ -2,7 +2,7 @@
   --color-primary: #cc9ab6;
   --color-secondary: #333;
   --color-primary-light: #e5e5e5;
-  --color-grey: #B0B0B0;
+  --color-grey: #b0b0b0;
   --font-primary: "Roboto", "Lato", arial, sans-serif;
 }
 
